# SchmooGame

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-linux.yml  build-windows.yml
docs/: BUILDING.md
include/: console_interface.hpp  schmoo.hpp  test_interface.hpp  web_interface.hpp
src/: console_main.cpp  schmoo.cpp  test_interface.cpp  test_main.cpp  web_main.cpp
tests/: test_cases.txt
